feat: Add "Sort by my priorities" button and viewer choice weight for kinks

--- a/chat/locales/de.json
+++ b/chat/locales/de.json
@@ -497,6 +497,7 @@
   "profile.expand": "Ausklappen",
   "profile.favorite": "Favorit",
   "profile.favorites": "Favoriten",
+  "profile.sortByMyPriorities": "Nach Prioritäten sortieren",
   "profile.friends.loading": "Lade Freunde.",
   "profile.friends.none": "Keine Freundschaften zum Anzeigen.",
   "profile.friends.unableLoad": "Freundschaften können nicht geladen werden.",
