feat: Adds warning for chat3/ host paths

--- a/chat/locales/en_us.json
+++ b/chat/locales/en_us.json
@@ -450,6 +450,7 @@
   "login.error.proxy": "Failed to set proxy",
   "login.filterCharacters": "Filter characters…",
   "login.host": "Host",
+  "login.host.presumedIncorrect": "Are you sure? The default value should be correct for almost every user",
   "login.password": "Password",
   "login.proxy": "Proxy",
   "login.save": "Save login",
