--- a/chat/locales/en_us.json
+++ b/chat/locales/en_us.json
@@ -11,6 +11,8 @@
   "action.edit": "Edit",
   "action.eicon.copy": "Copy EIcon name",
   "action.eicon.copyBbcode": "Copy EIcon BBCode",
+  "action.eicon.block": "Block EIcon",
+  "action.eicon.unblock": "Unblock EIcon",
   "action.hide": "Hide Horizon",
   "action.incognito": "Open in Incognito mode",
   "action.markAsRead": "Mark all as read",
@@ -612,6 +614,29 @@
   "settings.dangerZone": "Danger Zone!",
   "settings.defaultHighlights": "Use global highlight words",
   "settings.disallowedTags": "Disallowed BBCode tags (comma-separated)",
+  "settings.mutedWords": "Muted words",
+  "settings.mutedWords.placeholder": "Type a word (use * as wildcard) and press Enter",
+  "settings.mutedWords.add": "Add",
+  "settings.mutedWords.note": "Filter matches in chat messages. Use * to match any characters within a word.",
+  "settings.mutedWords.editHint": "Editing a word — press Enter to save or Esc to cancel.",
+  "settings.mutedWordsMode": "Muted word behavior",
+  "settings.mutedWordsMode.hide": "Hide matched words",
+  "settings.mutedWordsMode.spoiler": "Spoiler matched words",
+  "settings.mutedWordsMode.blur": "Blur matched words",
+  "settings.mutedWordsMode.hide-message": "Hide entire message",
+  "settings.mutedEicons": "Muted eicons",
+  "settings.mutedEicons.placeholder": "Type an eicon name (use * as wildcard) and press Enter",
+  "settings.mutedEicons.add": "Add",
+  "settings.mutedEicons.note": "Hide or spoiler eicons in the EIcon picker and chat. Use * to match any characters.",
+  "settings.mutedEicons.editHint": "Editing an eicon — press Enter to save or Esc to cancel.",
+  "settings.mutedEiconsMode": "Muted eicon behavior",
+  "settings.mutedEiconsMode.hide": "Hide eicons",
+  "settings.mutedEiconsMode.spoiler": "Spoiler eicons",
+  "settings.mutedEiconsMode.blur": "Blur eicons",
+  "settings.mutedEiconsMode.replace": "Replace eicons",
+  "settings.mutedEiconsReplacement": "Replacement eicon",
+  "settings.mutedEiconsReplacement.placeholder": "Enter eicon name (e.g. 'boobs' for boob mode)",
+  "settings.mutedWords.spoilerText": "[filtered — click to reveal]",
   "settings.displayLanguage": "Display Language",
   "settings.displayLanguage.note": "Languages might not be fully translated yet.\nWe have a tool for tracking progress, so you do not need to report missing translations.",
   "settings.enterAge": "Enter age",
