feat: Ignored users are now visible in settings

--- a/chat/locales/en_us.json
+++ b/chat/locales/en_us.json
@@ -770,6 +770,8 @@
   "settings.preview.link": "Show a link/ image preview when the mouse hovers over a link",
   "settings.profile": "Profile",
   "settings.profile.viewer": "Profile viewer",
+  "settings.profile.ignoredList": "Ignored characters",
+  "settings.profile.ignoredList.empty": "You aren't currently ignoring any users.",
   "settings.profile.autoCompareKinks": "Automatically compare kinks when viewing a character profile",
   "settings.profile.autoExpandCustoms": "Automatically expand custom kinks",
   "settings.profileViewer": "Use profile viewer",
