Update/ changelog dialog layout update. Also adds test menu options for showing the update dialog

--- a/chat/locales/en_us.json
+++ b/chat/locales/en_us.json
@@ -7,6 +7,7 @@
   "action.copyWithoutBBCode": "Copy without BBCode",
   "action.cut": "Cut",
   "action.delete": "Delete",
+  "action.developer": "Developer",
   "action.dismiss": "Dismiss",
   "action.edit": "Edit",
   "action.eicon.copy": "Copy EIcon name",
@@ -92,11 +93,13 @@
   "changelog.openReleases": "Open latest release",
   "changelog.quitAndDownload": "Quit and download",
   "changelog.quitAndDownload.confirm": "You are still connected to chat. \nAre you sure you want to exit and download the update right now?",
+  "changelog.remindLater": "Remind me later",
   "changelog.version": "Changelog for {0}",
-  "changelog.manualUpdate": "Horizon {0} is available, you’re on {1}. This install can’t auto-update. Update with your package manager or download the latest release.",
+  "changelog.manualUpdate": "This install can’t auto-update. Update with your package manager or download the latest release.",
   "update.restart.message": "Update downloaded. Restart now to install it?",
   "update.restart.confirmConnected": "You are still connected to chat. \nAre you sure you want to restart and install the update right now?",
   "update.installOnQuit.note": "Updates install when you quit the app.",
+  "update.autoInstall": "Automatically download and install updates in the future",
   "channel.description": "Description",
   "channel.mode.ads": "Ads",
   "channel.mode.ads.countdown": "Ads ({0}m{1}s)",
