feat: Changelog layout update for the autoupdater
Also fixes the discord and kofi links openning in an external browser, and adds localization to stuff that didn't have it.

--- a/chat/locales/en_us.json
+++ b/chat/locales/en_us.json
@@ -30,6 +30,7 @@
   "action.toggleStickyPreview": "Toggle Sticky Preview",
   "action.update": "Quit and download update",
   "action.updateAvailable": "UPDATE AVAILABLE",
+  "action.updateTitle": "An update is available!",
   "action.view": "View",
   "admgr.actionFor": "Ads for {0}",
   "admgr.activeHeader": "Auto-Posting Ads",
@@ -88,12 +89,15 @@
   "ads.selectTagRequired": "Select at least one tag to post",
   "changelog.compare": "Horizon {0} is available, you are using {1}.",
   "changelog.download": "Download",
+  "changelog.releaseNotes": "Release notes",
   "changelog.updateNow": "Update now",
   "changelog.skipUpdate": "Skip this update",
   "changelog.openReleases": "Open latest release",
   "changelog.quitAndDownload": "Quit and download",
   "changelog.quitAndDownload.confirm": "You are still connected to chat. \nAre you sure you want to exit and download the update right now?",
   "changelog.remindLater": "Remind me later",
+  "changelog.supportHorizon": "Support Horizon!",
+  "changelog.supportHorizonTitle": "Support us on Ko-Fi",
   "changelog.version": "Changelog for {0}",
   "changelog.manualUpdate": "This install can’t auto-update. Update with your package manager or download the latest release.",
   "update.restart.message": "Update downloaded. Restart now to install it?",
