--- a/chat/locales/en_uwu.json
+++ b/chat/locales/en_uwu.json
@@ -29,6 +29,7 @@
   "action.toggleStickyPreview": "Togglwe Stwicky Pweview",
   "action.update": "Quit and downwoad update",
   "action.updateAvailable": "UPDATE AVAIWABWE",
+  "action.updateTitle": "An update is avaiwable!",
   "action.view": "Vew~",
   "admgr.actionFor": "Awwds fow {0}",
   "admgr.activeHeader": "Auwto-Powsting Awwds~ >w<",
@@ -87,8 +88,11 @@
   "ads.selectTagRequired": "Sewect at weast onye tag to post",
   "changelog.compare": "Howizon {0} is avaiwabwe, u awe using {1}. OwO",
   "changelog.download": "Downwoad",
+  "changelog.releaseNotes": "Wewease nyotes",
   "changelog.quitAndDownload": "Quit and downwoad",
   "changelog.quitAndDownload.confirm": "U awe stiww connyected to chat. \nAwe u suwe u want to exit and downwoad da update wight nyow? OwO",
+  "changelog.supportHorizon": "Suppowt Howizon!",
+  "changelog.supportHorizonTitle": "Suppowt us on Ko-Fi",
   "changelog.version": "Changewog fow {0}",
   "channel.description": "Descwiption",
   "channel.mode.ads": "Ads",
