feat(logs): add log sharing for PMs

--- a/chat/locales/en_us.json
+++ b/chat/locales/en_us.json
@@ -470,6 +470,14 @@
   "logs.html": "Would you like to export these logs as HTML with formatting? Otherwise, they will be exported as plain text.",
   "logs.selectCharacter": "Select a character…",
   "logs.selectConversation": "Select a conversation…",
+  "logs.cancelSelect": "Cancel",
+  "logs.select": "Select",
+  "logs.selectConfirm": "Send {0} selected message(s) to {1}?",
+  "logs.selectedCount": "{0} selected",
+  "logs.share": "Share",
+  "logs.shareOffline": "Cannot share logs: {0} is offline.",
+  "logs.shareSuccess": "Logs shared successfully.",
+  "logs.shareTooLong": "The selected messages are too long to send in a single message. Please select fewer messages.",
   "logs.title": "Logs",
   "manageChannel.action": "Manage {0}",
   "manageChannel.description": "Description",
