Better notification text for watched channel users:
To help differentiate between DMs and these channel messages, notification body now mentions the channel (similar to word pings)

--- a/chat/locales/en_us.json
+++ b/chat/locales/en_us.json
@@ -394,7 +394,8 @@
   "events.status.ownMessage": "You are now {0}: {1}",
   "events.timeout": "{2} has timed out {1} from {0} for {3} minutes.",
   "events.uptime": "Server has been running since {0}, with currently {1} channels and {2} users, a total of {3} accepted connections, and {4} maximum users.",
-  "events.watchedUserPosted": "{0} spoke in {1}",
+  "events.watchedUserPosted": "{0} spoke in {1}.",
+  "events.watchedUserPosted.notification": "{0} spoke in {1}:\n{2}",
   "filter": "Type to filter…",
   "fixLogs.action": "Fix corrupted logs",
   "fixLogs.character": "Character",
